--- a/PD report_rough.Rmd
+++ b/PD report_rough.Rmd
@@ -12,8 +12,11 @@ setwd("C:/Users/rache/Downloads")
 library(ggplot2)
 library(tableone)
 library(gridExtra)
+library(pander)
 park <- read.csv(file="Parkinsons.csv", sep=",")
 park$Group <- as.factor(park$Group)
+park$Gender <- as.factor(park$Gender)
+levels(park$Gender) <- c("Male", "Female")
 park <- park[complete.cases(park$SixMn_Wk4) == TRUE,]
 park <- park[complete.cases(park$FiveM_Wk4) == TRUE,]
 
@@ -22,11 +25,11 @@ park$secdif <- park$FiveM_Tm4-park$FiveM_Tm0 # negative if improvement
 
 ```
 ## Introduction
-This study addressed the dearth of information pertaining to long-term benefit of regemented exercise for people with early to mid-stage Parkinson's Disease. 121 participants were enrolled in the trial and were randomly assigned to one of three treatment groups, stratifying by Gender. The three exercise groups were as follows:
+This study addressed the dearth of information pertaining to long-term benefit of regemented exercise for people with early to mid-stage Parkinson's Disease. 121 participants were recruited for the study and were randomly assigned to one of three treatment groups, stratifying by Gender. The three exercise groups were as follows:
 1. At home exercises recommended by the National Parkinson's Foundation. Participants attended one supervised session per month.
 2. A flexibility/balance/function (FBF) program of three observed sessions weekly for the first 4 months, and tapered frequency down to once a month for the remaining 8 months.
 3. An Aerobic Exercise program with a supervision structure identical to the FBF group.
-The participant population is detailed in Table 1. Retention rates remained quite high at 4 weeks with 86.8% of participants retained at this milestone. The average participant had been diagnoses with PD for 4.44 years with a standard deviation of 3.91 years. Unfortunately, 85.1% of the study population was PD stage 2 or 2.5. This does impose some restrictions on modeling capabilities but application of bootstrap sampling methods enables a stronger assessment of true population variation.
+The participant population is detailed in Table 1. Retention rates remained quite high at 4 weeks with 86.8% of participants retained at this milestone. The average participant had been diagnoses with PD for 4.44 years with a standard deviation of 3.91 years. 41% of the population was female and the average participant was 64.5 years old.
 ```{r, echo=F}
 ## Vector of variables to summarize
 myVars <- c("Age", "YearsDx", "Gender", "HYstage0")
@@ -38,13 +41,15 @@ tab2
 ```
 
 ## Question and Hypothesis
-Reported findings showed that the greatest improvement was seen at the four month check-up. Following this vein, the research question asked here is whether or not a person's Hoehn and Yahr stage of PD at week zero was a predictor of the level of improvement seen at week four. It may be that those with more advanced Parkinson's did not confer as great a benefit from the interventions as those with earlier stages. Stage was scaled from 1 (lowest) to 4 (highest), moving up in increments of .5. Our findings could serve the physician community by providing anticipated benefits for patients at various stages of PD. If a patient is more advanced, perhaps a more involved intervention would be prescribed. Conversely, those with very early stage PD may be encouraged to pick-up an exercise regimen, but may need less supervision and monitoring.
+Published findings showed that the greatest improvement in mobility was seen at the four month milestone. Following this vein, the question addressed here asks whether or not a person's Hoehn and Yahr stage of Parkinson's Disease at week zero was a predictor of the level of improvement seen at month four. It may be that those with more advanced Parkinson's did not confer as great a benefit from the interventions as those with earlier stages. Stage was scaled from 1 (lowest) to 4 (highest), moving up in increments of .5. Our findings could serve the physician community by providing anticipated benefits for patients at various stages of PD. If a patient is more advanced, perhaps a more involved intervention would be prescribed. Conversely, those with very early stage PD may be encouraged to pick-up an exercise regimen, but may need less supervision and monitoring.
 
 ## Methods
-We first generated two outcome variables. 1) The difference in time taken to walk 2 meters between week 4 and 0, a negative value indicated a decrease in time. 2) The difference in distance walked in 6 minutes between week 4 and week 0, again with negative values indicating improvement. Participants worsened by an average of `r mean(park$sixdif)` _______ in their 6 minute walk with standard deviation `r sd(park$sixdif)`. This incredible variability suggests that some patients benefitted much greater than others. Participants improved by an average of `r mean(park$secdif)` seconds in their 2 meter walk time with standard deviation `r sd(park$secdif)`. Again this indicates that despite intervention, some patients still worsened while others saw improvement.
-To initially assess model capabilities, we conducted a bootstrap assessment of R-squared values for the crude and adjusted models. The crude model contains the precision variables of Gender and Group with an interaction variable of Group with the primary outcome at the time point, either six minute walk distance or 2 meter walk time, and an adjustment for Levedopa dose at the time of the assessment--4 weeks in this assessment. The adjusted model includes the variable indicating stage at the start of the study. Following generation of R-squared values, multivariate linear models were compared against each other using a partial-F test. Though a single new variable was introduced in the larger model, a Partial F test will give the same results as a t-test and was appropriate to use in this case. 
+We first generated two outcome variables. 1) The difference in time taken to walk 2 meters between week 4 and 0, a negative value indicated a decrease in time. 2) The difference in distance walked in 6 minutes between week 4 and week 0, again with negative values indicating improvement. Participants worsened by an average of `r mean(park$sixdif)` meters in their 6 minute walk with standard deviation `r sd(park$sixdif)`. This incredible variability suggests that some patients benefitted much greater than others. Participants improved by an average of `r mean(park$secdif)` seconds in their 2 meter walk time with standard deviation `r sd(park$secdif)`. Again this indicates that patients had varying degrees of response to the intervention.
+To broadly assess model capabilities, we conducted a bootstrap assessment of R-squared values for the crude and adjusted models. The crude model contains the precision variables of Gender, Group, Levidopa dosage at month four, and an interaction variable of Group with Levidopa. These predicted either six minute walk distance or 2 meter walk time. The adjusted model includes the variable indicating stage of Parkinson's Disease at the start of the study. Following generation of R-squared values, multivariate linear models were compared against each other using a partial-F test. Though a single new variable was introduced in the larger model, a Partial F test will give the same results as a t-test and was appropriate to use in this case. 
 
 ## Results:
+Quick assessment of outcome variables indicated that enormous variability existed in benefit seen by participants. One patient saw improvement of `r round(max(park$sixdif))` meters for their six minute walk difference. Another had worsening of `r round(min(park$sixdif))` on their walking distance. 
+
 ### R-Squared Values:
 ```{r, echo=F}
 # bootstrap function that reports bootstrapped r squared values
@@ -88,7 +93,7 @@ plot2 <- ggplot(sec_r2_full, aes(rsq, fill = model)) + geom_density(alpha = 0.2)
 grid.arrange(plot1, plot2, ncol=2)
 
 ```
-Quick assessment of outcome variables indicated that enormous variability existed in benefit seen by participants. To mediate the effect of outlier results, R-squared values were fitted to bootstrapped samples of the dataset (Table 2.) Values for both models predicting outcomes were highly similar, as is shown by the large amount of overlap between the crude and adjusted areas. The median values for the crude and adjusted models predicting improvement in six minute walking distance are `r round(median(six_r2_full$rsq[six_r2_full$model == "Crude"]),3)` and `r round(median(six_r2_full$rsq[six_r2_full$model == "Stage Adjusted"]),3)`, respectively. Those for improvement in 2 meter walking time are `r round(median(sec_r2_full$rsq[six_r2_full$model == "Crude"]),3)`
+To mediate the effect of outlier results, R-squared values were fitted to bootstrapped samples of the dataset (Table 2). Values for both crude and adjusted models highly similar, as is shown by the large amount of overlap in density areas. The median values for the crude and adjusted models predicting improvement in six minute walking distance are `r round(median(six_r2_full$rsq[six_r2_full$model == "Crude"]),3)` and `r round(median(six_r2_full$rsq[six_r2_full$model == "Stage Adjusted"]),3)`, respectively. Those for improvement in 2 meter walking time are `r round(median(sec_r2_full$rsq[six_r2_full$model == "Crude"]),3)`
  `r round(median(sec_r2_full$rsq[six_r2_full$model == "Stage Adjusted"]),3)`, respectively.
 
 ```{r, echo=F}
@@ -97,26 +102,34 @@ lm_six_crude <- lm(park$sixdif ~ Gender + Group + LEDD4 + Group*LEDD4, data = pa
 lm_sec_crude <- lm(park$secdif ~ Gender + Group + LEDD4 + Group*LEDD4, data = park) 
 
 #adjusted for stage at week 0
-lm_sixminute <- lm(park$sixdif ~ HYstage0 + Gender + Group + LEDD4 + Group*LEDD4, data = park)
-lm_seconds <- lm(park$secdif ~ HYstage0 + Gender + Group + LEDD4 + Group*LEDD4, data = park)
+lm_sixminute <- lm(park$sixdif ~  Gender + Group + LEDD4 + Group*LEDD4 + HYstage0, data = park)
+lm_seconds <- lm(park$secdif ~ Gender + Group + LEDD4 + Group*LEDD4 + HYstage0, data = park)
 
 # Partial F tests:
 six_anova <- anova(lm_six_crude, lm_sixminute) # not significant
 sec_anova <- anova(lm_sec_crude, lm_seconds) # not significant
 
+#obtain coefficients for table
 est_six_crude <- lm_six_crude$coefficients
+names(est_six_crude) <- c("Intercept", "Female", "FBF", "Aerobic", "Levidopa", "FBF:Levidopa", "Aerobic/Levidopa")
 est_six_adj <- lm_sixminute$coefficients
+names(est_six_adj) <- c("Intercept", "Female", "FBF", "Aerobic", "Levidopa", "Stage", "FBF:Levidopa", "Aerobic:Levidopa")
 
-six_change$variable <- c("Gender", "Group", "Levidopa", "Levidopa/Group", "HY Stage")
-six_change$crude <- c(-8.02, 28.53, )
+myList <- list(est_six_adj, est_six_crude)
+
+l <- myList
+coef_table <- do.call(rbind, lapply(lapply(l, unlist), "[",
+                      unique(unlist(c(sapply(l,names))))))
+pander(coef_table)
+
 ```
 
 ### Model Significance
-To understand if differences in Stage of Parkinson's Disease at the start of treatment impacted a patient's level of improvement by week 4, we ran two models. An unadjusted model that contained the precision variables accounted for in study design, and an adjusted model that added in stage at study outset. The unadjusted model contained Gender, Group, Levidopa dosage at week 4, and the interaction between levidopa dosage and Group. The slope estimates for each variable change by as much as .01 but more typically as little as .001 with the adjustment for stage of PD in the model. Change in slope estimates are shown in Table 3. Stage was not statistically significant, and due to the incredibly small changes in slope estimates for the other variables, it's contribution to the model had no clinical significance. Partial F-tests of the two models indicated that there was no significant difference for both six minute walking distance (p: .758) and for two meter walking time (p: .847)
+To understand if differences in Stage of Parkinson's Disease at the start of treatment impacted a patient's level of improvement by week 4, we ran two models: 1) An unadjusted model that contained the precision variables accounted for in study design, and 2) an adjusted model that added in stage at study outset. The unadjusted model contained Gender, Group, Levidopa dosage at month 4, and the interaction between levidopa dosage and Group. Change in slope estimates for predicting six minute walking distance are shown in Table 3. Slope estimates for two meter time are not shown because they were identical to those predicting six minute distance down to the 100th decimal place. Stage was not statistically significant (p=758), and due to the incredibly small changes in slope estimates for the other variables, it's contribution to the model had no clinical significance. Partial F-tests of the two models indicated that there was no significant difference in estimation ability for both six minute walking distance (p= .758) and for two meter walking time (p=.847).
 
 ## Discussion
-After generation of the crude and adjusted model, it was found that a participant's stage of Parkinson's Disease at the start of the study did not have a clinically significant impact on the level of improvement they saw after four weeks, regardless of which treatment group they were in. After control for Gender differences and levidopa dose differences, at appears that the treatment group was the best predictor of of the level of improvement in an individual.
-There are some limitations of this study that must be addressed. Table 1 shows that the majority of patients (85.1%) had stage 2 or 2.5 of Parkinson's Disease, with only 2 patients of the population retained at week four having a physician measured stage of 1. Due to the limited variability in stage, it is possible that true differences in response by week four due to various severities of the disease were not detected.
+After generation of the crude and adjusted model, it was found that a participant's stage of Parkinson's Disease at the start of the study did not have a clinically significant impact on the level of improvement they saw after four months, regardless of which treatment group they were in. After control for Gender differences and Levidopa dose differences, at appears that treatment group was the best predictor of of the level of improvement in both six minute walk distance and two meter walk time. Large amounts of R-squared overlap shown in Table 2 indicated that the amount of variability predicted by the adjusted model differed in no clinically meaningful way from the unadjusted model. Though, due to enormous sample sizes from the bootstrap (1000 iterations), the differences were statistically significant.
+There are some limitations of this study that must be addressed. Table 1 shows that the majority of patients (85.1%) had stage 2 or 2.5 of Parkinson's Disease, with only 2 patients of the population retained at week four having a physician measured stage of 1. Due to the limited variability in stage, it is possible that true changes in response due to differing disease severity were not detected.
 
 
 
